--- a/hackathon2024-FRONTEND/knumingle/android/app/build.gradle
+++ b/hackathon2024-FRONTEND/knumingle/android/app/build.gradle
@@ -42,6 +42,8 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        def flutterGoogleMapKey = project.findProperty('flutterGoogleMapKey') ?: ""
+        buildConfigField "String", "flutterGoogleMapKey", "\"${flutterGoogleMapKey}\""
     }
 
     buildTypes {
@@ -49,6 +51,7 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            buildConfigField "String", "flutterGoogleMapKey", "AIzaSyB7cHSD4lZcDCzG_Ga-LsgGVc1JyNfHzNU"
         }
     }
 }
