--- a/hackathon2024-FRONTEND/knumingle/pubspec.yaml
+++ b/hackathon2024-FRONTEND/knumingle/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.7
+  google_maps_flutter: ^2.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
