--- a/hackathon2024-FRONTEND/knumingle/android/build.gradle
+++ b/hackathon2024-FRONTEND/knumingle/android/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id "org.jetbrains.kotlin.android" version "1.5.20" // Kotlin 플러그인 추가
+}
 allprojects {
     repositories {
         google()
