--- a/hackathon2024-FRONTEND/knumingle/ios/Runner/Info.plist
+++ b/hackathon2024-FRONTEND/knumingle/ios/Runner/Info.plist
@@ -3,7 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location permission is needed to show your current location on the map.</string>
+	<string>위치 서비스를 사용합니다.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>위치 서비스를 항상 사용합니다.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라 사용에 필요합니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
