--- a/hackathon2024-FRONTEND/knumingle/pubspec.yaml
+++ b/hackathon2024-FRONTEND/knumingle/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.7
   google_maps_flutter: ^2.9.0
+  location: ^4.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,7 +61,19 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+   - family: ggsansBold
+     fonts:
+       - asset: assets/fonts/gg_sans_Bold.ttf
+   - family: ggsansMedium
+     fonts:
+       - asset: assets/fonts/gg sans Medium.ttf
+   - family: ggsansRegular
+     fonts:
+       - asset: assets/fonts/gg sans Regular.ttf
+   - family: ggsansSemibold
+     fonts:
+       - asset: assets/fonts/gg sans Semibold.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
