--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 	//swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	//map
-	implementation 'com.google.maps:google-maps-services:0.17.0'
+	implementation 'com.google.maps:google-maps-services:0.17.0' // 최신 버전 확인 필요
 
 }
 
