--- a/hackathon2024-FRONTEND/knumingle/pubspec.yaml
+++ b/hackathon2024-FRONTEND/knumingle/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   image_picker: ^0.8.7
   google_maps_flutter: ^2.9.0
   location: ^4.4.0
+  http: ^0.13.3
+  shared_preferences: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
