--- a/hackathon2024-FRONTEND/knumingle/pubspec.yaml
+++ b/hackathon2024-FRONTEND/knumingle/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   location: ^4.4.0
   http: ^0.13.3
   shared_preferences: ^2.0.0
+  path_provider: ^2.0.11
+  intl: ^0.17.0
+  advance_pdf_viewer: ^2.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,6 +62,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/files/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
